--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thorn Chorn - Software Developer</title>
+    <title>Siek Chhaihang - Software Developer</title>
     <script>
       // Check for saved theme preference or use system preference
       if (
